<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">看房神器</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="login_name_phone_mail">请输入手机号</string>
    <string name="login_password">输入密码</string>
    <string name="affirm_password">确认密码</string>
    <string name="m_password">修改密码</string>
    <string name="quick_login">快速登录</string>
    <string name="hint_input_phone_num">输入手机号码</string>
    <string name="hint_verification_code">输入验证码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="register_now">立即注册</string>
    <string name="hint_reg_pwd">请输入6&#8211;16位字母和数字的密码</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="submit">提交</string>
    <string name="query">查询</string>
    <string name="save">保存</string>
    <string name="loading">加载中&#8230;</string>
    <string name="register_success">注册成功</string>
    <string name="txt_unlogin">未登录</string>
	<string name="goback">返回</string>
	<string name="seek">搜索</string>

	<!-- 图片详情 -->
	<string name="txt_index">%1$s/%2$s</string>
    <!-- custom view -->
    <string name="release_to_refresh">松开刷新</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="refreshing">正在刷新&#8230;</string>
    <string name="updating">最近更新：</string>


    <string name="cash_redpacket">现金红包</string>
    
    <string name="tab_bar_ic_kanfang">找房</string>
    <string name="tab_bar_ic_jihua">计划</string>
    <string name="tab_bar_ic_faxian">发现</string>
    <string name="tab_bar_ic_wode">我的</string>

    <string name="text_xunwen">询问</string>
    <string name="text_daohang">导航</string>
    <string name="text_jihua">加入计划</string>
    <string name="user_info_title">个人信息</string>
    <string name="user">我的</string>
    <string name="jihua_title">看房计划</string>
    <!-- 提示信息 -->
    <string name="hint_error_net">网络异常，请稍后重试！</string>
    <string name="hint_service_net">服务器异常，请稍后重试！</string>
    <string name="hint_no_net">哎呀，肿么断网了</string>
	<string name="hint_submit_cash_success">提现申请成功！</string>
	<string name="hint_cancel_interest_success">取消关注成功！</string>
	<string name="alert_title_common">看房神器</string>
	<string name="alert_cancel_interest_content">确定要取消关注吗？</string>
	<string name="hint_can_not_send_empty_msg">发送信息不能为空！</string>
	<string name="alert_unlogin">您还未登录，需要登录吗？</string>
	<string name="alert_logout">您确定要退出吗？</string>
	<string name="alert_clear">您确定要清空吗？</string>
	<string name="alert_no_need_clear">暂无缓存文件，无需清理！</string>
	<string name="hint_notify_empty">暂无通知</string>
	<string name="hint_empty_now">暂无</string>
	<string name="hint_see_house_plan_empty">暂无看房记录</string>
	<string name="hint_building_discuss_empty">该楼盘暂无访客评论</string>
	<string name="hint_remind_empty">没有新的提醒，不如上去冒个泡吧</string>
	<string name="hint_interest_empty">添加关注楼盘</string>
	<string name="hint_income_empty">无收入记录哦</string>
	<string name="hint_pick_cash_empty">无提现记录哦</string>
	<string name="hint_red_packet_empty">赶快去售楼处激活红包吧</string>
	<string name="hint_red_packet_empty_title">暂无收益</string>
	<string name="hint_wonderful_activity_empty">更多精彩，尽情期待</string>
    <string name="weibosdk_demo_not_support_api_hint">微博客户端未安装或微博客户端是非官方版本。</string>
	<string name="hint_add_interest_success">楼盘关注成功！</string>
	<string name="hint_add_seehouse_plan_success">看房计划加入成功！</string>
	<string name="hint_add_seehouse_plan_already">已添加过看房计划！</string>
	<string name="hint_no_phone_building">该楼盘尚未登记联系电话！</string>
	<string name="hint_no_building_search">您要找的楼盘飞走了！</string>
	<string name="hint_no_plans">暂无看房清单，快去添加楼盘吧</string>
    <!-- 发现 -->
    <string name="see_house_circle">看房圈</string>
    <string name="encyclopedia">百科</string>
    <string name="see_house_tools">看房工具</string>
    <string name="wonderful_activity">精彩活动</string>
    <!-- 操作信息 -->
    <string name="txt_sure">确定</string>
    <string name="txt_cancel">取消</string>
    <string name="txt_click_retry">点击重试</string>
    <!-- 下拉刷新 -->
    <string name="listview_footer_hint_normal">查看更多</string>
    <string name="load_all_already">已加载了全部信息！</string>
    <!-- 百科 -->
	<string name="show_more">展开更多</string>
	<string name="hide_more">收起展开</string>
	<!-- 精彩活动 -->
	<string name="title_wonderful_activity">精彩活动</string>
	<string name="txt_persons_num">%1$s人参与</string>
	<!-- 现金红包 -->
	<string name="title_cash">现金红包</string>
	<string name="pickup_cash">提现</string>
	<string name="accumulative_receive">累计收益</string>
	<string name="wait_for_activation">待激活</string>
	<string name="could_pick">可提现金额（元）</string>
	<string name="trade_record">交易记录</string>
	<!-- 交易记录 -->
	<string name="txt_pick_cash">提现</string>
	<string name="txt_income">收入</string>
	<!-- 提现 -->
	<string name="txt_phone_number">手机号码：</string>
	<string name="txt_money">金额：</string>
	<string name="txt_max_pick_cash">本次最多提现%1$s元</string>
	<string name="txt_min_pick_cash">每次最少提取50元</string>
	<string name="txt_zhifubao">支付宝账户</string>
	<string name="txt_next_step">下一步</string>
	<string name="txt_account_zhifubao">支付宝账户：</string>
	<string name="txt_account_name">真实姓名：</string>
	<string name="title_account">账户</string>
	<string name="txt_submit">提交</string>
	<!-- 交易详情 -->
	<string name="txt_bill_no">订单号</string>
	<string name="title_trade_detail">交易详情</string>
	<string name="txt_create_time">创建时间</string>
	<string name="txt_resubmit">重新提交</string>
	<!-- 意见反馈 -->
	<string name="suggestionfeedback_editText">请您提供宝贵的意见</string>
	<string name="suggestionfeedback_title_name">我的反馈</string>
	<!-- 个人成就 -->
	<string name="txt_personal_achievement">个人成就</string>
	<string name="txt_my_qr">我的二维码</string>
	<string name="txt_qr">二维码</string>
	<string name="txt_qr_desc">扫一扫上面的二维码图案</string>
	<!-- 发表有礼 -->
	<string name="title_publish_gift">发表有礼</string>
	<string name="txt_publish_time">发表于：%1$s</string>
	<string name="txt_see_house_time">看房时间：%1$s</string>
	<string name="txt_unpublish">待发表</string>
	<string name="txt_published">已发表</string>
	<!-- 常用工具 -->
	<string name="title_tools">常用工具</string>
	<string name="txt_loan_calculator">贷款计算器</string>
	<string name="txt_buy_house_ability">购房能力评估</string>
	<string name="txt_accumulation_fund_calculator">公积金贷款计算器</string>
	<string name="txt_advance_repayment_calculator">提前还款计算器</string>
	<string name="txt_taxation_calculator">税费计算器</string>
	<string name="txt_accumulation_fund_loan_interest">公积金贷款利率</string>
	<!-- 分享 -->
	<string name="txt_wx_friend">微信好友</string>
	<string name="txt_circle_friend">朋友圈</string>
	<string name="txt_sms">短信</string>
	<string name="txt_qq_friend">QQ好友</string>
	<string name="txt_qq_space">QQ空间</string>
	<string name="txt_xin_lang">新浪微博</string>
	<string name="txt_share_title">看房神器</string>
	<string name="txt_share_desc">神器在手，看房无忧</string>
	<string name="txt_share_url">http://www.kfsq.cn/app/kfsq.html</string>
	<!-- 通知 -->
	<string name="title_notify">通知</string>
	<!-- 设置 -->
	<string name="title_setting">设置</string>
	<string name="txt_msg_notify">消息通知</string>
	<string name="txt_clear_cache">清空缓存</string>
	<string name="txt_about_us">关于我们</string>
	<string name="txt_url_about_us">http://www.kfsq.cn/app/about.html</string>
	<!-- 看房圈 -->
	<string name="txt_ask">问问</string>
	<string name="txt_interest">关注</string>
	<string name="txt_remind">提醒</string>
	<string name="txt_publish">发表</string>
	<string name="txt_add_new_interest">添加新的关注</string>
	<string name="txt_cancel_interest">取消关注</string>
	<string name="txt_interested">已关注</string>
	<string name="txt_discuss_amount">共%1$s条评论</string>
	<string name="title_ask_detail">问问详情</string>
	<string name="title_building_detail">楼盘详情</string>
	<string name="txt_send">发送</string>
	<string name="txt_reply">回复：%1$s</string>
	<string name="txt_reply_only">&#160;回复&#160;</string>
	<string name="txt_colon">：</string>
	<string name="txt_discuss">评论</string>
	<string name="txt_reply_your_discuss">回复了你的评论</string>
	<!-- 图片浏览 -->
    <string name="only_choose_num">超出可选图片张数</string>
    <string name="finish">完成</string>
    <string name="invalidSD">sdcard无效或没有插入！</string>
    <string name="photo">选择相册</string>
    <string name="album">相册</string>
    <string name="preview">预览</string>
    <string name="unfinished">未完成</string> 
    <string name="camera_cancel">完成</string>
    <string name="no_photo">相册没有图片</string>
   <string name="user_registration_protocol"> 用户注册协议</string>
    <string name="back">返回</string>
    
	<!-- 发表 -->
	<string name="hint_publish">这一刻对楼盘的想法</string>
	
	<string name="no_result">对不起，您输入的地址不够明确！</string>
	<string name="error_network">搜索失败,请检查网络连接！</string>
    <string name="error_key">key验证无效！</string>
    <string name="error_other">未知错误，请稍后重试!错误码为</string>
    <!-- 楼盘详情 -->
    <string name="no_data">暂无数据</string>
    <string name="txt_add_interest">+关注</string>
    
    <string name="txt_take_picture">拍照</string>
    <string name="txt_from_album">从相册选取</string>
    <!-- 我的 -->
    <string name="txt_default_nickname">看房星人</string>
    <string name="txt_account_input_limit">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
        <string name="time_next">Next</string>
    <string name="time_prev">Previous</string>

    <string-array name="weeks">
        <item>一</item>
        <item>二</item>
        <item>三</item>
        <item>四</item>
        <item>五</item>
        <item>六</item>
        <item>日</item>
    </string-array>
</resources>