<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:titlebar="http://schemas.android.com/apk/res/com.xinwei.kanfangshenqi"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fafafa" >

    <com.xinwei.kanfangshenqi.view.TitleBarView
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        titlebar:leftImage="@drawable/zhuce_cancel"
        titlebar:title="@string/register" >
    </com.xinwei.kanfangshenqi.view.TitleBarView>

    <LinearLayout
        android:id="@+id/input_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titlebar"
        android:layout_marginLeft="@dimen/register_input_linerlayout_marginLR"
        android:layout_marginRight="@dimen/register_input_linerlayout_marginLR"
        android:orientation="vertical" >
        <RelativeLayout
            android:id="@+id/verification_code"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            >

            <TextView
                android:id="@+id/reget_code"
                android:layout_width="80dp"
                android:layout_height="34dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/btn_orange_send_code"
                android:gravity="center"
                android:padding="@dimen/register_text_padding"
                android:text="@string/get_verification_code"
                android:textColor="@color/white"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/input_phone"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/reget_code"
                android:hint="@string/hint_input_phone_num"
                android:inputType="number"
                android:maxLength="11"
                android:background="@null"
                android:saveEnabled="true"
                android:singleLine="true"
                android:textColorHint="@color/text_gray_input"
                android:textSize="16sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/line" />

        <LinearLayout
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            >

            <EditText
                android:id="@+id/input_code"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@null"
                android:hint="@string/hint_verification_code"
                android:inputType="number"
                android:saveEnabled="true"
                android:singleLine="true"
                android:maxLength="6"
                android:textColorHint="@color/text_gray_input"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/line" />

        <LinearLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            >

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@null"
                android:hint="@string/login_password"
                android:saveEnabled="true"
                android:singleLine="true"
                android:textColorHint="@color/text_gray_input"
                android:inputType="textPassword"
                android:maxLength="16"
                android:textSize="16sp" />
            
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/line" />

        <LinearLayout
            android:id="@+id/password_agen"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            >

            <EditText
                android:id="@+id/input_password_agen"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@null"
                android:hint="@string/affirm_password"
                android:saveEnabled="true"
                android:singleLine="true"
                android:inputType="textPassword"
                android:maxLength="16"
                android:textColorHint="@color/text_gray_input"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/line" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/checkBox"
        style="@style/CustomCheckboxTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_ll"
        android:layout_marginLeft="@dimen/activity_global_group_button_margin_left"
        android:layout_marginTop="12dp"
        android:textColor="@color/black"
        android:checked="true"
        android:textSize="12sp" />

    <LinearLayout
        style="@style/layout"
        android:layout_below="@+id/input_ll"
        android:layout_marginTop="12dp"
        android:layout_toRightOf="@+id/checkBox"
        android:orientation="horizontal"
        android:paddingLeft="6dp" >

        <TextView
            android:id="@+id/txtAgree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="同意看房神器"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/treaty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="用户注册协议"
            android:textColor="#4c8fe3"
            android:textSize="13sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_global_group_button_height"
        android:layout_below="@id/checkBox"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="@dimen/register_buttom_marginTop"
        android:background="@drawable/btn_default_selector"
        android:text="@string/register_now"
        android:textColor="@color/white" />

</RelativeLayout>